# sdf-build

./: .gitignore  .gitlab-ci.yml  README.md  flake.nix  get_version.py  pyproject.toml  setup.cfg  setup.py  shell.nix
docs/: render.py
examples/: CSG.ipynb  Examples.ipynb  Octopus.ipynb  blobby.py  customizable_box.py  gearlike.py  image.py  knurling.py  pawn.py
sdf/: __init__.py  d2.py  d3.py  dn.py  ease.py  errors.py  mesh.py  util.py
tests/: test_3d.py  test_ease.py  test_nd.py  test_util.py
