[tool.poetry]
name = "sdfcad"
version = "0.1.0"
description = "Simple 3D mesh generation with Python based on signed distance functions"
authors = ["Yann Büchau <nobodyinperson@posteo.de>","Michael Fogleman <michael.fogleman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "sdf" } ]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"
meshio = "^5.3.4"
numpy = "^1"
scikit-image = ">=0.17"
scipy = "^1"
Pillow = "^10.0.1"
rich = "^13.5.3"
Pint = "^0.22"
nbstripout = "^0.6.1"
trame-vtk = "^2.5.8"

[tool.poetry.extras]
show = ["trame","pyvista"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
jupyterlab = "^4.0.6"
trame = "^3.2.6"
pyvista = "^0.42.2"
ipywidgets = "^8.1.1"
trame-vuetify = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
