[tool.poetry]
name = "sdfcad"
version = "0.1.0"
description = "Simple 3D mesh generation with Python based on signed distance functions"
authors = ["Yann Büchau <nobodyinperson@posteo.de>","Michael Fogleman <michael.fogleman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "sdf" } ]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"
meshio = "^5.3.4"
numpy = "^1"
scikit-image = ">=0.17"
scipy = "^1"
Pillow = "^10.0.1"
rich = "^13.5.3"
Pint = "^0.22"
ipython = {version = "^8.15.0", optional = true}
ipywidgets = {version = "^8.1.1", optional = true}
jupyterlab = {version = "^4.0.6", optional = true}
pyvista = {version = "^0.42.2", optional = true}
trame = {version = "^3.2.6", optional = true}
trame-vtk = {version = "^2.5.8", optional = true}
trame-vuetify = {version = "^2.3.1", optional = true}

[tool.poetry.extras]
jupyter = [
    "ipython",
    "ipywidgets",
    "jupyterlab",
    "pyvista",
    "trame",
    "trame-vtk",
    "trame-vuetify"
]

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.1"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
